--- a/src/index.css
+++ b/src/index.css
@@ -2,4 +2,28 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+  
+}
+.search-bar{
+  margin: 20px;
+  text-align: center;
+}
+.search-bar input{
+  width: 75%;
+}
+
+.video-item img{
+  max-width:64px;
+}
+.video-detail.detail{
+  margin-top: 10px;
+  padding: 10px;
+  border: solid 1px black;
+  border-radius: 4px;
+}
+.video-group-item{
+  cursor: pointer;
+}
+.list-group-item:hover{
+  background-color: #eee;
 }
